re PR tree-optimization/56837 (-ftree-loop-distribute-patterns generates incorrect code)

2013-04-04  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/56837
	* tree-loop-distribution.c (classify_partition): For non-zero
	values require that the value has the same precision as its
	mode to be useful as memset value.

	* g++.dg/torture/pr56837.C: New testcase.

From-SVN: r197477